# runbook-gen

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly-agent.yml
docs/: example-validation.json  section-stats.json
docs/adr/: README.md
docs/examples/: payments-runbook.md
scripts/: nightly_agent.py
src/runbookgen/: __init__.py  cli.py
src/runbookgen/commands/: export.py  generate.py  validate.py
src/runbookgen/core/: config.py  exporter.py  extractor.py  generator.py  validator.py
tests/: test_config.py  test_extractor.py  test_validator.py
